fix: 补齐缺少的翻译参数

--- a/src/main/resources/assets/kotreen/lang/zh_cn.json
+++ b/src/main/resources/assets/kotreen/lang/zh_cn.json
@@ -1,10 +1,10 @@
 {
-  "kotreen.command.failure.arrangement.existed": "假人配置已存在",
-  "kotreen.command.failure.arrangement.null": "假人配置不存在",
-  "kotreen.command.failure.arrangement.online": "假人已在线",
-  "kotreen.command.failure.arrangement.offline": "假人离线",
-  "kotreen.command.failure.series.existed": "系列配置已存在",
-  "kotreen.command.failure.series.null": "系列配置不存在",
+  "kotreen.command.failure.arrangement.existed": "假人配置 %s 已存在",
+  "kotreen.command.failure.arrangement.null": "假人配置 %s 不存在",
+  "kotreen.command.failure.arrangement.online": "假人 %s 已在线",
+  "kotreen.command.failure.arrangement.offline": "假人 %s 离线",
+  "kotreen.command.failure.series.existed": "系列配置 %s 已存在",
+  "kotreen.command.failure.series.null": "系列配置 %s 不存在",
   "kotreen.command.failure.action": "无法执行！出现了一点问题",
   "kotreen.command.tooltip.description": "描述：%s",
   "kotreen.command.tooltip.action": "动作：%s",
